--- a/Hackathon-Googlee/Hackathon-Googlee/Info.plist
+++ b/Hackathon-Googlee/Hackathon-Googlee/Info.plist
@@ -59,6 +59,6 @@
 		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<true/>
+	<false/>
 </dict>
 </plist>
