--- a/Hackathon-Googlee/Hackathon-Googlee/Info.plist
+++ b/Hackathon-Googlee/Hackathon-Googlee/Info.plist
@@ -38,12 +38,16 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Cho phép truy cập camera</string>
 	<key>NSLocationAlwaysUsageDescription</key>
 	<string>Cho phép sử dụng định vị</string>
 	<key>NSLocationUsageDescription</key>
 	<string>Cho phép sử dụng định vị</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>Cho phép sử dụng định vị</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Cho phép truy cập thư viện</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
